--- a/SBUI/src/app/company/company-details/company-details.component.html
+++ b/SBUI/src/app/company/company-details/company-details.component.html
@@ -1,8 +1,6 @@
 <div class="row shadow-sm mt-3 m-1 pb-3 pt-3 rounded">
   <div class="col-md-3 pt-2">
-    <img
-      src="https://scontent.fsof3-1.fna.fbcdn.net/v/t1.0-9/62443174_2440250496216157_8456221913499303936_o.jpg?_nc_cat=105&_nc_oc=AQlN38IrT7YEJiADO-5T-R1WK1bP81L6yUs53i1kcDlRON23Fsk8aNNB4EGQT789Bag&_nc_ht=scontent.fsof3-1.fna&oh=f71c3b5ad6c4cec1c091ba7ee726ab04&oe=5D87FFC6"
-      class="img-thumbnail" width="150" alt="">
+    <img src="{{ company.imageUrl }}" class="img-thumbnail" width="150">
   </div>
   <div class="col-md mb-3">
     <div class="row">
@@ -32,7 +30,7 @@
   <div class="col-md-12">
     <hr>
     <span *ngFor="let provider of company.providers">
-      <img *ngFor="let department of provider.departments" class="mr-2" width="25" src="{{ department.pictureUrl }}"
+      <img *ngFor="let department of provider.departments" class="mr-2" width="25" src="{{ department.imageUrl }}"
         alt="{{ department.name }}" title="{{ department.name }}">
     </span>
   </div>
