--- a/SBUI/src/app/company/company-details/company-details.component.html
+++ b/SBUI/src/app/company/company-details/company-details.component.html
@@ -1,6 +1,6 @@
-<div class="row shadow-sm mt-3 m-1 pb-3 pt-3 rounded">
+<div *ngIf="company.id" class="row shadow-sm mt-3 m-1 pb-3 pt-3 rounded">
   <div class="col-md-3 pt-2">
-    <img src="{{ company.imageUrl }}" class="img-thumbnail" width="150">
+    <img src="http://localhost:49419/api/company/{{ company.id }}/image" class="img-thumbnail" width="150">
   </div>
   <div class="col-md mb-3">
     <div class="row">
@@ -30,7 +30,7 @@
   <div class="col-md-12">
     <hr>
     <span *ngFor="let provider of company.providers">
-      <img *ngFor="let department of provider.departments" class="mr-2" width="25" src="{{ department.imageUrl }}"
+      <img *ngFor="let department of provider.departments" class="mr-2" width="25" src="http://localhost:49419/api/departments/{{ department.id }}/image"
         alt="{{ department.name }}" title="{{ department.name }}">
     </span>
   </div>
