--- a/SBUI/src/app/company/edit/edit.component.html
+++ b/SBUI/src/app/company/edit/edit.component.html
@@ -1,4 +1,4 @@
-<div class="card my-3 shadow-sm">
+<div *ngIf="object.id" class="card my-3 shadow-sm">
   <div class="card-header">
     <h5 class="m-0">
       <div class="row">
@@ -52,7 +52,7 @@
                 <div *ngFor="let department of selectedProvider.departments">
                   <input type="checkbox" id="{{department.name}}" class="k-checkbox" />
                   <label class="k-checkbox-label" for="{{department.name}}"><img class="mb-2" width="25"
-                      src="{{ department.imageUrl }}" title="{{ department.name }}">
+                      src="http://localhost:49419/api/departments/{{ department.id }}/image" title="{{ department.name }}">
                     <span class="ml-2">{{department.name}}</span></label>
                 </div>
                 <div class="mt-2">
@@ -83,7 +83,7 @@
                     <button kendoButton [primary]=true [look]="'flat'"><i class="fas fa-trash"></i></button>
                   </div>
                 </div>
-                <img src=" {{ object.imageUrl }}" class="img-thumbnail mt-0">
+                <img src="http://localhost:49419/api/objects/{{ object.id }}/image" class="img-thumbnail mt-0">
                 <kendo-upload [saveUrl]="uploadSaveUrl" [removeUrl]="uploadRemoveUrl" class="mt-2">
                   <kendo-upload-messages select="Upload Image">
                   </kendo-upload-messages>
