--- a/SBUI/src/app/company/structure/structure.component.html
+++ b/SBUI/src/app/company/structure/structure.component.html
@@ -27,7 +27,8 @@
             <div class="input-group" #objectsInput>
               <kendo-autocomplete #objectsAutocomplete class="form-control" [data]="objects" [suggest]="true"
                 [valueField]="'name'" value="{{selectedObjects}}"
-                (valueChange)="onObjectsAutocompleteValueChange($event)" aria-describedby="inner-button">
+                (valueChange)="onObjectsAutocompleteValueChange($event)" aria-describedby="inner-button"
+                (click)="onObjectAutocompleteClick()">
               </kendo-autocomplete>
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" id="inner-button" type="button" kendoButton #objectsButton
@@ -44,7 +45,7 @@
           <div class="col-md ml-3 mr-3 mb-3">
             <h6>Object Type</h6>
             <kendo-combobox #typesCombobox [data]="objectTypes" [suggest]="true" [textField]="'name'"
-              [valueField]="'name'" class="w-100">
+              [valueField]="'name'" class="w-100" (focus)="onObjectTypesComboboxClick()">
             </kendo-combobox>
           </div>
           <div class="col-md ml-3 mr-3 mb-3">
@@ -52,7 +53,8 @@
             <div class="input-group" #tfmsInput>
               <kendo-autocomplete #tfmsAutocomplete class="form-control" [data]="tfms" [suggest]="true"
                 [valueField]="'dataToDisplay'" value="{{selectedTfms}}"
-                (valueChange)="onTfmsAutocompleteValueChange($event)" aria-describedby="inner-button">
+                (valueChange)="onTfmsAutocompleteValueChange($event)" aria-describedby="inner-button"
+                (click)="onTfmsAutocompleteClick()">
               </kendo-autocomplete>
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" id="inner-button" type="button" kendoButton #tfmsButton
